# LogViewFilter

./: .gitignore  CMakeLists.txt  CMakePresets.json  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md
docs/superpowers/plans/: 2026-06-25-remember-last-file-dialog-path.md
docs/superpowers/specs/: 2026-06-25-remember-last-file-dialog-path-design.md
